Updates following expanded specification in Google Doc at https://docs.google.com/document/d/1gDZXuJldLMR6rhQoo6nkeLK2NegUBV1g/edit#

--- a/agnostic-solutions-database/com.aisquared.zoomtext-translations.yaml
+++ b/agnostic-solutions-database/com.aisquared.zoomtext-translations.yaml
@@ -3,18 +3,9 @@ configuration:
     Preferences\.PromptOnExit:
       literalValue: 0
     PRIMARY\.magPower:
-      transform:
-        type: fluid.transforms.linearScale
-        inputPath: 'http://registry\.gpii\.net/common/magnification'
-        factor: 100
+      simpleTransform: '100 * ${http://registry\.gpii\.net/common/magnification} + 0'
     'STATIC 1\.magPower':
-      transform:
-        type: fluid.transforms.linearScale
-        inputPath: 'http://registry\.gpii\.net/common/magnification'
-        factor: 100
+      simpleTransform: '100 * ${http://registry\.gpii\.net/common/magnification} + 0'
   inverseCapabilitiesTransformations:
     'http://registry\.gpii\.net/common/magnification':
-      transform:
-        type: fluid.transforms.linearScale
-        inputPath: PRIMARY\.magPower
-        factor: 0.01
+      simpleTransform: '0.01 * ${PRIMARY\.magPower} + 0'
