--- a/agnostic-solutions-database/com.microsoft.windows.mouseKeys-translations.yaml
+++ b/agnostic-solutions-database/com.microsoft.windows.mouseKeys-translations.yaml
@@ -23,8 +23,4 @@ configure:
   inverseCapabilitiesTransformations:
     'http://registry\.gpii\.net/common/mouseEmulation/enabled': MouseKeysOn.value
     'http://registry\.gpii\.net/common/cursorSpeed':
-      transform:
-        type: fluid.transforms.linearScale
-        inputPath: MaxSpeed.value
-        factor: 0.00285714285714
-        offset: -0.0285714285714
+      simpleTransform: '0.00285714285714 * ${MaxSpeed.value} + -0.0285714285714'
