--- a/agnostic-solutions-database/com.microsoft.windows.shortcutWarningSound-translations.yaml
+++ b/agnostic-solutions-database/com.microsoft.windows.shortcutWarningSound-translations.yaml
@@ -8,8 +8,4 @@ configure:
         'true': 1
   inverseCapabilitiesTransformations:
     'http://registry\.gpii\.net/applications/com\.microsoft\.windows\.shortcutWarningSound.Enabled':
-      transform:
-        type: fluid.transforms.binaryOp
-        leftPath: 'Sound on Activation'
-        right: 0
-        operator: '!=='
+      simpleTransform: '${Sound on Activation} !==0'
